2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-02-03	Joel Sherrill <joel@OARcorp.com>

	PR 338/filesystem
	* sapi/no-io.c: Side-effect of fixing reentrancy problem with 
	rtems_io_lookup_name() (API change).  Unused function removed.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Apply install-data-local to install *.rels.

2002-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Eliminate *_O_FILES.
	Don't create $ARCH in %.o: %.c rules.

2002-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use .$(OBJEXT) instead of .o.

2002-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Introduce sapi_C_FILES, rtems_C_FILES.

2002-12-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_BSP_CACHE.

2002-11-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in rtems/Makefile.am and sapi/Makefile.am.
	* sapi/Makefile.am: Removed.
	* rtems/Makefile.am: Removed.
	* rel.am: Removed.
	* configure.ac: Add RTEMS_BSP_CHECK_CACHE.
	Reflect changes above.

2002-11-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/Makefile.am: Reworked.
	* sapi/Makefile.am: Reworked.
	* rel.am: New.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-10-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/Makefile.am: Use .$(OBJEXT) instead of .o.